fix add token on mobile

--- a/src/components/balances/AssetsTable/styles.module.css
+++ b/src/components/balances/AssetsTable/styles.module.css
@@ -14,7 +14,7 @@
   gap: var(--space-1);
 }
 
-.add-token {
+.addToken {
   display: flex;
   align-items: center;
   gap: var(--space-1);
